[2020/2/18] Players may not place protectors near the Outback gate's exit location in the overworld. Existing protectors, if any, are left untouched. However, if their owner digs them, they won't be able to put them back until the gate moves again ….
[2020/2/18] Added secret stone and rackstone trapdoors.
[2020/2/18] Grant some cash to player the first (and only the first) time they craft a PoC. Should give new players a start on the economy and make setting up shops more worthwhile. Note: this should be considered experimental for now ….
[2020/2/18] Improve quality of stone door camouflage.
[2020/2/17] Returned the Outback's reset timer to 30 days. Protections for important locations should hopefully solve the griefing problems.
[2020/2/17] Players' bones are now preserved when the Outback resets, and will remain in the realm.
[2020/2/17] Reduce cost of vending/depositing machines & the market booth. New players may need to rely on these.
[2020/2/17] Added protectors to important locations in the Outback dimension.
[2020/2/17] Improve ore drops in the Outback so that a new player doesn't have to mine so much.
[2020/2/17] Added a calendar to player start items.
[2020/2/17] Experiment: reset the Outback every week instead of every month.
[2020/2/17] Added a tinderbox to player start items.
[2020/2/17] Tinderbox is now craftable using charcoal.
[2020/2/17] Reduced level of Nether grit and dauthsand from 3 to 2, for easier digging.
[2020/2/17] Flint is now obtainable from Nether grit.
[2020/2/17] Reduced wear rate on copper/bronze tools to make them more useful.
[2020/2/16] The calendar item now displays timers for events in the Outback and its Dimensional Gate.
[2020/2/16] The Dimensional Gate in the outback now changes its exit location from time to time … (10 - 90 realtime days).
[2020/2/16] Icemen (and some other mobs) no longer appear if loaded from old mapblocks during daytime (this is a bugfix).